# is-even

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
is_even/: __init__.py
tests/: test_is_even.py
